ont-api: [#45][jena-owl2] switch to use `com.github.sszuev:jena-owl2`